# Web-Scraping-with-Selenium-and-OpenAI-API-for-JavaScript-Driven-Websites

./: README.md  pyproject.toml
src/: marketing_brochure.py  ollamaLocalInference.py  selenium_webscraper.py  webscraper.py
